@@ -2,7 +2,7 @@
 <package>
 	<metadata>
 		<id>NHibernate.Envers</id>
-		<version>1.3.0</version>
+		<version>1.4.0</version>
 		<authors>NHibernate community, Hibernate community</authors>
 		<summary>Audit trail integrated with NHibernate.</summary>
 		<description>
